# co-cli

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile.sandbox  GEMINI.md  README.md  REVIEW-by-codex-prompt-gap-co-cli-vs-codex.md  TODO-autonomous-memory-lifecycle.md  TODO-ollama-think-model-non-reasoning-mode.md  greeting_bot.py  pyproject.toml  pytest_co_harness.py  scratch.py  settings.defaults.json  settings.example.json  settings.reference.json  strip_audit_log.py  test_diverse_reasoning.py  test_enable_thinking.py  test_getattr.py  test_log.py  test_main.py  test_ollama_thinking.py  test_response.md  validate_ollama_reasoning.py  verify_flow.py
.agent_docs/: code-conventions.md  review.md  rule-authoring-standard.md  spec-conventions.md  testing.md  tools.md
.co-cli/: README.md  search.db  session.json
.githooks/: pre-commit  pre-push
agent_docs/: code-conventions.md  review.md  spec-conventions.md  system-workflows-to-test.md  testing.md  tools.md
co_cli/: __init__.py  _approval.py  _approval_risk.py  _banner.py  _bootstrap.py  _chunker.py  _commands.py  _debug_personality.py  _doctor.py  _exec_approvals.py  _frontmatter.py  _history.py  _knowledge_index.py  _memory_consolidator.py  _memory_lifecycle.py  _model_check.py  _model_factory.py  _model_settings.py  _orchestrate.py  _preflight.py  _probes.py  _provider_errors.py  _sandbox_env.py  _session.py  _shell_policy.py  _signal_analyzer.py  _status.py  _tail.py  _telemetry.py  _tool_approvals.py  _trace_viewer.py  agent.py  background.py  banner.py  check.py  config.py  datasette_metadata.json  deps.py  display.py  dream_queue.py  (+13 more)
docs/: ARCHITECTURE.md  AUDIT-DESIGN-14-2026-02-26.md  AUDIT-approval-simplify.md  AUDIT-chunking-rrf.md  AUDIT-roadmap-2026-02-10.md  AUDIT-tool-docstrings.md  BACKLOG-OTEL-GCS-DUCKDB.md  BOOK-core.md  BOOK-infrastructure.md  BOOK-quickstart.md  BOOK-tools.md  COMPLETION-phase-documentation.md  CriticalGaps.md  DELIVERY-approval-simplify.md  DELIVERY-chunking-rrf.md  DELIVERY-codeps-refactor.md  DELIVERY-doctor.md  DELIVERY-model-roles-schema.md  DELIVERY-sqlite-tag-fts-sem-search-for-knowledge.md  DELIVERY-startup-background-hardening.md  DELIVERY-startup-flow-consolidation.md  DELIVERY-thinking-subagent.md  DESIGN-00-co-cli.md  DESIGN-01-agent-chat-loop.md  DESIGN-01-agent.md  DESIGN-02-chat-loop.md  DESIGN-02-eval.md  DESIGN-02-personality.md  DESIGN-03-llm-models.md  DESIGN-04-otel-logging.md  DESIGN-04-streaming-event-ordering.md  DESIGN-05-otel-logging.md  DESIGN-05-tail-viewer.md  DESIGN-06-conversation-memory.md  DESIGN-06-tail-viewer.md  DESIGN-07-context-governance.md  DESIGN-07-conversation-memory.md  DESIGN-07-theming-ascii.md  DESIGN-08-theming-ascii.md  DESIGN-08-tool-shell.md  (+389 more)
evals/: AUDIT-trace-report-finch-jeff.md  _checks.py  _common.py  _deps.py  _drift.py  _fixtures.py  _frontend.py  _judge.py  _observability.py  _ollama.py  _perf.py  _report.py  _rubrics.py  _settings.py  _timeouts.py  _tools.py  _trace.py  baseline-gemini.json  baseline-ollama.json  benchmark-qwen3-coder-tuning-result.md  benchmark-qwen3.5-coding-result.md  coding_toolchain.jsonl  eval_agentic_loop.py  eval_approval_discipline.py  eval_approval_flow.py  eval_article_fetch_flow.py  eval_background.py  eval_basic_chat.py  eval_benchmark_coding_models.py  eval_benchmark_instruct_models.py  eval_benchmark_thinking_models.py  eval_bootstrap_e2e.py  eval_bootstrap_flow.py  eval_bootstrap_flow_quality.py  eval_bounded_autonomy.py  eval_canon_recall.py  eval_character_memory_recall.py  eval_character_voice_baseline.py  eval_coding_toolchain.py  eval_compaction_flow_quality.py  (+97 more)
ollama/: Modelfile.glm-4.7-flash  Modelfile.glm-4.7-flash-q8  Modelfile.qwen3-30b-a3b-instruct-2507  Modelfile.qwen3-30b-a3b-q4  Modelfile.qwen3-30b-a3b-think-2507  Modelfile.qwen3-30b-a3b-thinking-2507-q4_k_m-agentic  Modelfile.qwen3-30b-a3b-thinking-2507-q4_k_m-nothink  Modelfile.qwen3-30b-a3b-thinking-2507-q8_0-agentic  Modelfile.qwen3-30b-q4_k_m-agentic  Modelfile.qwen3-30b-q4_k_m-nothink  Modelfile.qwen3-30b-research  Modelfile.qwen3-coder-next-q4_k_m-agentic  Modelfile.qwen3-coder-next-q4_k_m-code  Modelfile.qwen3-coder-next-q8_0-agentic  Modelfile.qwen3.5-35b-a3b-code  Modelfile.qwen3.5-35b-a3b-instruct  Modelfile.qwen3.5-35b-a3b-q4_k_m-agentic  Modelfile.qwen3.5-35b-a3b-q4_k_m-nothink  Modelfile.qwen3.5-35b-a3b-q4_k_m-research  Modelfile.qwen3.5-35b-a3b-q4_k_m-summarize  Modelfile.qwen3.5-35b-a3b-think
scripts/: _audit_utils.py  calibrate_spill_size.py  demo_e2e_timeout.py  demo_knowledge_roundtrip.md  demo_knowledge_roundtrip.py  demo_memory_lifecycle.py  demo_reasoning_gap.py  dump_tool_index.py  e2e_ctrl_c.py  e2e_timeout.py  eval_conversation_history.py  eval_e2e_abort_marker.py  eval_e2e_compaction.py  eval_e2e_doom_loop.py  eval_e2e_finish_reason.py  eval_e2e_memory_linking.py  eval_e2e_opening_context.py  eval_e2e_project_instructions.py  eval_e2e_shell_reflection.py  eval_e2e_streaming.py  eval_tool_calling.py  generate_quality_samples.py  install-hooks.sh  llm_audit_performance.py  llm_audit_quality.py  llm_audit_roles.py  llm_audit_runtime.py  llm_audit_session.py  llm_audit_tools.py  llm_call_audit.py  llm_runtime_stats.py  quality-gate.sh  show_phase1d_diff.py  tail-jsonl.sh  test_memory_lifecycle_movie_query-report-rerun.md  test_memory_lifecycle_movie_query-report.md  test_memory_lifecycle_movie_query.py  trace_report_personality.py  validate_gemini_models.py  validate_ollama_models.py  (+2 more)
tests/: _co_harness.py  _frontend.py  _ollama.py  _settings.py  _timeouts.py  conftest.py  show_phase1d_diff.py  test_agent.py  test_agent_build_task_agent.py  test_agents.py  test_approval.py  test_approval_risk.py  test_approvals.py  test_articles.py  test_atomic_write.py  test_atomic_write_persistence.py  test_background.py  test_batch1_integration.py  test_bootstrap.py  test_bootstrap_core.py  test_capabilities.py  test_capabilities_mcp.py  test_chunker.py  test_circuit_breaker.py  test_cli_skills_curator.py  test_cli_skills_review.py  test_cloud.py  test_co_trace_command.py  test_commands.py  test_config.py  (+276 more)
(+1393 files in other folders)
