[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "co-cli"
version = "0.7.63"
description = "Co — personal AI assistant CLI with approval-gated shell, Google Drive/Gmail/Calendar, Obsidian, and OTel tracing"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasette>=0.65.2",
    "google-api-python-client>=2.189.0",
    "google-auth-httplib2>=0.3.0",
    "google-auth-oauthlib>=1.2.4",
    "google-genai>=1.61.0",
    "opentelemetry-sdk>=1.39.1",
    "prompt-toolkit>=3.0.52",
    "pydantic-ai==1.77.0",
    "rich>=14.3.2",
    "typer>=0.21.1",
    "datasette-pretty-json>=0.3",
    "httpx>=0.28.1",
    "html2text>=2025.4.15",

    "pysqlite3>=0.6.0",
    "sqlite-vec>=0.1.6",
    "ollama>=0.6.1",
]

[project.scripts]
co = "co_cli.main:app"

[dependency-groups]
dev = [
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.10",
]
[tool.ruff]
target-version = "py312"
line-length = 99
src = ["co_cli", "tests", "evals"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
    "RUF",    # ruff-specific rules
]
ignore = [
    "E402",   # module-import-not-at-top — conditional/deferred imports are intentional
    "E501",   # line length — handled by formatter
    "E741",   # ambiguous variable name — false positives on short well-known names
    "N806",   # non-lowercase-variable-in-function — function-local constants are fine uppercase
    "N814",   # camelcase-imported-as-constant — used for re-exported class aliases
    "RUF001", # ambiguous unicode — intentional in personality/display strings
    "SIM105", # suppressible-exception — explicit try/except often clearer than contextlib.suppress
]

[tool.ruff.lint.isort]
known-first-party = ["co_cli"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pyright]
pythonVersion = "3.12"
include = ["co_cli"]
exclude = ["tests", "evals", "scripts"]
typeCheckingMode = "standard"
# pydantic-ai SDK generics (Agent, RunContext, ToolReturnContent) and
# stub-less packages (pysqlite3, google-genai) produce false positives
# that cannot be fixed without casts everywhere. Downgrade to warnings
# so the gate passes while still surfacing them for review.
reportArgumentType = "warning"
reportAttributeAccessIssue = "warning"
reportOptionalMemberAccess = "warning"
reportReturnType = "warning"
reportIndexIssue = "warning"
reportInvalidTypeForm = "warning"
reportOperatorIssue = "warning"
reportGeneralClassIssue = "warning"
reportCallIssue = "warning"
reportAssignmentType = "warning"
reportIncompatibleMethodOverride = "warning"

[tool.pytest.ini_options]
addopts = "-x --durations=0 -p _co_harness"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
pythonpath = ["tests"]
