[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "co-cli"
version = "0.8.41"
description = "Co — personal AI assistant CLI with approval-gated shell, Google Drive/Gmail/Calendar, Obsidian, and OTel tracing"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-api-python-client>=2.189.0",
    "google-auth-httplib2>=0.3.0",
    "google-auth-oauthlib>=1.2.4",
    "google-genai>=1.61.0",
    "opentelemetry-sdk>=1.39.1",
    "prompt-toolkit>=3.0.52",
    "pydantic-ai==1.81.0",
    "rich>=14.3.2",
    "typer>=0.21.1",
    "httpx>=0.28.1",
    "html2text>=2025.4.15",

    "pysqlite3>=0.6.0",
    "sqlite-vec>=0.1.6",
    "ollama>=0.6.1",
]

[project.scripts]
co = "co_cli.main:app"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-timeout>=2.4.0",
    "ruff>=0.15.10",
]
[tool.ruff]
target-version = "py312"
line-length = 99
src = ["co_cli", "tests", "evals"]
exclude = ["tmp/"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
    "RUF",    # ruff-specific rules
    "C90",    # McCabe complexity — enforces modular, non-tangled functions
    "PT",     # pytest style — enforces test discipline
    "T20",    # no stray print() calls in production code
]
ignore = [
    "E402",   # module-import-not-at-top — conditional/deferred imports are intentional
    "E501",   # line length — handled by formatter
    "E741",   # ambiguous variable name — false positives on short well-known names
    "N806",   # non-lowercase-variable-in-function — function-local constants are fine uppercase
    "N814",   # camelcase-imported-as-constant — used for re-exported class aliases
    "RUF001", # ambiguous unicode — intentional in personality/display strings
    "SIM105", # suppressible-exception — explicit try/except often clearer than contextlib.suppress
]

[tool.ruff.lint.isort]
known-first-party = ["co_cli"]

[tool.ruff.lint.mccabe]
max-complexity = 12

[tool.ruff.lint.per-file-ignores]
"evals/**/*.py" = ["T201", "C901"]  # evals use print intentionally; test scenarios are inherently complex
"scripts/**/*.py" = ["T201", "C901"]  # scripts use print intentionally; audit scripts have inherently complex report builders
"tests/**/*.py" = ["C901"]          # comprehensive test functions naturally exceed complexity limits
"tests/_*.py" = ["T201"]            # test infrastructure helpers use print for progress output
"strip_audit_log.py" = ["T201"]     # root-level one-off script, print is intentional

[tool.ruff.format]
quote-style = "double"
indent-style = "space"


[tool.pytest.ini_options]
addopts = "-x --durations=0 -p _co_harness"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
pythonpath = ["tests"]
timeout = 120
markers = [
    "local: requires local infrastructure (Ollama, GPU) — skipped in CI",
]
